<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.hooitis.hoo.edgecoloringbook.vm.MainVM"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:background="@color/colorPrimaryGray"
        android:id="@+id/container_startup">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/draw_cont"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/white"
            android:foreground="@color/colorPrimaryBlackDarkTrans">

        </android.support.constraint.ConstraintLayout>

        <Button
            android:id="@+id/save_drawing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimary"
            android:textAppearance="@style/appFont"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guide_text"
            android:textColor="@color/white"
            android:textAlignment="textStart"
            android:textAppearance="@style/appFont.Title"
            android:layout_marginTop="25dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guide_text2"
            android:textColor="@color/white"
            android:textAppearance="@style/appFont"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</layout>

